# polypaver

./: .gitignore  CHANGES  Main.hs  README.md  binary-compatibility-linux.txt  index.html  paver-todo.md  paver-todo.txt  paver.cabal  polypaver-pages.cabal  polypaver.cabal
_site/: index.html  news.html  tutorials.html
_site/css/: polypaver.css  syntax.css
_site/pages/: Changelog.html  CommandLineOptions.html  Installation.html  QuickStart.html  SyntaxPP.html  VerifyingSPARKprograms.html  about.html  features.html
_site/posts/: post1.html  post2.html  post3.html
_site/tutorials/: expriemann-1-annots.html
benchmarks/: index.html
benchmarks/erfriemann01/: aroundloop.pp  erfriemann.siv  riemann.adb
benchmarks/erfriemann01/polypaver-0.2/: aroundloop.invocations
benchmarks/erfriemann02/: aroundloop-subst-noresult.pp  aroundloop-subst.pp  aroundloop.pp  erfriemann.siv  riemann.adb  riemann.ads
benchmarks/erfriemann02/polypaver-0.2-20131217/: .gitignore  aroundloop-subst-noresult.invocations
binary/2015-06-27/linux-x86_64/: pp_ada_fpops
bits/: about.md  features.md
css/: polypaver.css
examples/: Bench.hs  bench.hs  false.hs  integral.hs  mini.hs  proval.hs  sqrt43.hs  test.hs  true.hs
examples/SPARK/: README  README.md
examples/SPARK/erfriemann/: README.md  gnat.cfg
examples/SPARK/erfriemann/src/: riemann.adb  riemann.ads
examples/SPARK/peak/: README.md  peak.smf
examples/SPARK/peak/src/: exact.ads  numeric.ads  peak.adb  peak.ads
examples/SPARK/sqrt/: README.md  gnat.cfg  sqrt.smf
examples/SPARK/sqrt/src/: exact.ads  num.adb  num.ads  numeric.ads  sqrt.adb
examples/SPARK2005/erfriemann/: riemann.smf
examples/SPARK2005/peak/src/: peak.ads
examples/SPARK2005/sqrt/: spark.sw  sqrt.smf
examples/SPARK2005/sqrt/src/: sqrt.ads
examples/float_my_cosine2/: float_my_cosine2_1.hs  float_my_cosine2_2.hs  float_my_cosine2_3.hs  float_my_cosine2_4.hs
examples/form/: true.form
examples/haskell/: false.hs  integral.hs  mini.hs  proval.hs  sqrt43.hs  sqrtexp.hs  true.hs
examples/old/rr/peakq/: peakq_4.hs
examples/old/their_sqrt/: their_sqrt_6.hs
examples/pp/: README  README.md  integral.pp  metit-xsc.pp  mini.pp  skewing.pp  skewing2.pp  sqrt43.pp  wikip-eab.pp
examples/rr/coeffs/: coeffs_1.hs  coeffs_10.hs  coeffs_2.hs  coeffs_3.hs  coeffs_4.hs  coeffs_6.hs  coeffs_7.hs
examples/rr/peakq/: peakq_2.hs  peakq_3.hs  peakq_4.hs  peakq_5.hs  peakq_7.hs
examples/rr/peakunit/: peakunit_11.hs  peakunit_12.hs
examples/their_sqrt/: their_sqrt_10.hs  their_sqrt_11.hs  their_sqrt_12.hs  their_sqrt_13.hs  their_sqrt_14.hs  their_sqrt_15.hs  their_sqrt_17.hs  their_sqrt_18.hs  their_sqrt_19.hs  their_sqrt_20.hs  their_sqrt_21.hs  their_sqrt_22.hs  their_sqrt_23.hs  their_sqrt_24.hs  their_sqrt_25.hs  their_sqrt_27.hs  their_sqrt_28.hs  their_sqrt_3.hs  their_sqrt_4.hs  their_sqrt_5.hs  their_sqrt_7.hs  their_sqrt_9.hs
examples/tptp/metitarski/: exp-hyperbolic-1.tptp
examples/tptp/why3/: wikip-eab-for-metit.tptp
examples/vc/: README.md  integral.vc  mini.vc  power.vc  quadratic.vc  skewing.vc  sqrt43.vc  universalreal.vc
main/: polypaver.hs
pages/: Changelog.md  CommandLineOptions.md  Installation.md  QuickStart.md  SyntaxPP.md  VerifyingSPARKprograms.md  about.html  features.html  features.md
posts/: post1.md  post2.md  post3.md
src/: Canvas.hs  Cosine.hs  Eval.hs  Form.hs  LevelSlice.hs  Logic.hs  Main.hs  Numeric  Paver.hs  Plot.hs  Plotter.hs  PolyPaver.hs  Proval.hs  Prover.hs  Solver.hs  Sqrt.hs  Teddy.hs  Test.hs  TruthValue.hs  Vars.hs  polypaver.hs  pp_simplify.hs  readsiv.hs  sqrt43.hs  t.siv  test.hs
src/Main/: OI.hs  Plotter.hs  Prover.hs
src/Main/OI/: Form.hs  Plotter.hs  Prover.hs
src/Numeric/ER/: BasicTypes.hs  Misc.hs  ShowHTML.hs
src/Numeric/ER/BasicTypes/: DomainBox.hs  ExtendedInteger.hs  PlusMinus.hs
src/Numeric/ER/BasicTypes/DomainBox/: IntMap.hs
src/Numeric/ER/Real/: Approx.hs  Base.hs  DefaultRepr.hs
src/Numeric/ER/RnToRm/: Approx.hs  BisectionTree.hs  DefaultRepr.hs
src/OI/: TruthValue.hs
src/PolyPaver/: APBox.hs  Args.hs  Box.hs  DeriveBounds.hs  Eval.hs  Form.hs  GenerateMain.hs  Invocation.hs  Logic.hs  PPBox.hs  Paver.hs  Plot.hs  ProverLoop.hs  Solver.hs  Substitution.hs  Subterms.hs  Vars.hs
src/PolyPaver/Input/: Haskell.hs  Misc.hs  SPARK.hs  TPTP.hs
src/PolyPaver/Simplify/: Args.hs  Substitution.hs
src/examples/: Bench.hs  Proval.hs  test.hs
src/examples/float_my_cosine2/: float_my_cosine2_1.hs  float_my_cosine2_2.hs  float_my_cosine2_3.hs  float_my_cosine2_4.hs
src/examples/rr/coeffs/: coeffs_2.hs  coeffs_6.hs
src/examples/rr/peakq/: peakq_2.hs  peakq_3.hs  peakq_5.hs
src/examples/rr/peakunit/: peakunit_11.hs  peakunit_12.hs
src/examples/their_sqrt/: their_sqrt_10.hs  their_sqrt_11.hs  their_sqrt_12.hs  their_sqrt_13.hs  their_sqrt_14.hs  their_sqrt_17.hs  their_sqrt_18.hs  their_sqrt_19.hs  their_sqrt_20.hs  their_sqrt_21.hs  their_sqrt_24.hs  their_sqrt_25.hs  their_sqrt_3.hs  their_sqrt_4.hs  their_sqrt_5.hs  their_sqrt_6.hs  their_sqrt_7.hs
src/float_my_cosine2/: float_my_cosine2_1.hs  float_my_cosine2_2.hs  float_my_cosine2_4.hs
src/their_sqrt/: their_sqrt_11.hs  their_sqrt_13.hs  their_sqrt_14.hs  their_sqrt_17.hs  their_sqrt_18.hs  their_sqrt_19.hs  their_sqrt_25.hs  their_sqrt_4.hs  their_sqrt_5.hs  their_sqrt_7.hs
src/tools/: readsiv.hs  readtptp.hs
templates/: footer.html  headcommon.html  nav.html  news.html  newsPost.html  page.html  tutorial.html  tutorials.html
tools/: readsiv.hs  readtptp.hs
tools/SPARK2005/examples/erfRiemann/: .gitignore  erf_riemann.gpr  main.adb  pp_f_elementary.ads  pp_lf_elementary.adb  pp_lf_elementary.ads  riemann.adb  riemann.ads
tools/SPARK2005/preprocessor/: .gitignore  pp_ada_fpops.gpr  pp_fpops.gpr
tools/SPARK2005/preprocessor/src/: context_processing.adb  context_processing.ads  fp_detect.adb  fp_detect.ads  fp_translation.adb  fp_translation.ads  pp_ada_fpops.adb  pp_ada_fpops.ads  pp_fpops.adb  pp_fpops.ads  unit_processing.adb  unit_processing.ads
tutorials/: expriemann-1-annots.md
(+53 files in other folders)
