name:                polypaver-pages
version:             0.1.0.1
license:             MIT
license-file:        LICENCE
license-file:        LICENCE.hakyll-bootstrap
category:            Web
author:              Michal Konecny
maintainer:          mikkonecny@gmail.com
build-type:          Simple
cabal-version:       >=1.16

executable polypaver-pages
  main-is:             Main.hs
  build-depends:
    base,
    containers >= 0.5
    , pandoc     >= 1.11
    , hakyll     >= 4.3
