Name:           polypaver
Version:        0.2
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Jan Duracz and Michal Konecny (Aston University)
Copyright:      (c) 2011,2013 Jan Duracz, Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/polypaver/
Stability:      experimental
Category:       Numerical, Theorem Provers
Synopsis:       Numerical theorem prover based on polynomial interval arithmetic
Tested-with:    
                GHC ==7.6.3
Description:
    Tools for deciding systems of real inequalities and interval inclusions over bounded domains, featuring:
    .    
    * explicit intervals and interval expressions
    .
    * all field operations
    .
    * abs
    .
    * sqrt, exp, sin, cos
    .
    * integrals
    .
    The decision procedure consists in constructing tight polynomial approximations
    to the expressions over parts of the domain. 

Extra-Source-Files:
    CHANGES
    LICENCE
    examples/pp/README
    examples/pp/mini.pp
    examples/pp/power.pp
    examples/pp/sqrt43.pp
    examples/pp/integral.pp
    examples/pp/skewing.pp
    examples/pp/skewing2.pp
    examples/haskell/sqrtexp.hs
    examples/form/true.form
    examples/SPARK/README
    examples/SPARK/packages/polypaver.ads
    examples/SPARK/packages/polypaver-exact.ads
    examples/SPARK/packages/polypaver-floats.ads
    examples/SPARK/packages/polypaver-floats.adb
    examples/SPARK/packages/polypaver-long_floats.ads
    examples/SPARK/packages/polypaver-long_floats.adb
    examples/SPARK/packages/polypaver-integers.ads
    examples/SPARK/packages/polypaver-interval.ads
    examples/SPARK/peak/src/peak.adb
    examples/SPARK/peak/src/peak.ads
    examples/SPARK/peak/peak.smf
    examples/SPARK/peak/gnat.cfg
    examples/SPARK/peak/spark.sw
    examples/SPARK/peak/out/peak.sli
    examples/SPARK/peak/out/peak.lst
    examples/SPARK/peak/out/spark.rep
    examples/SPARK/peak/out/peak/max.fdl
    examples/SPARK/peak/out/peak/peakunit.slg
    examples/SPARK/peak/out/peak/peakunit.rls
    examples/SPARK/peak/out/peak/peakunit.vcg
    examples/SPARK/peak/out/peak/coeffs.rls
    examples/SPARK/peak/out/peak/peakunit.siv
    examples/SPARK/peak/out/peak/peakq.slg
    examples/SPARK/peak/out/peak/coeffs.slg
    examples/SPARK/peak/out/peak/peakq.vcg
    examples/SPARK/peak/out/peak/peakq.rls
    examples/SPARK/peak/out/peak/coeffs.fdl
    examples/SPARK/peak/out/peak/coeffs.vcg
    examples/SPARK/peak/out/peak/peakq.fdl
    examples/SPARK/peak/out/peak/peakunit.fdl
    examples/SPARK/peak/out/peak/max.vcg
    examples/SPARK/peak/out/peak/coeffs.siv
    examples/SPARK/peak/out/peak/max.rls
    examples/SPARK/peak/out/peak/max.siv
    examples/SPARK/peak/out/peak/max.slg
    examples/SPARK/peak/out/peak/peakq.siv
    examples/SPARK/sqrt/src/sqrt.adb
    examples/SPARK/sqrt/src/sqrt.ads
    examples/SPARK/sqrt/sqrt.smf
    examples/SPARK/sqrt/gnat.cfg
    examples/SPARK/sqrt/spark.sw
    examples/SPARK/sqrt/out/example/sqrt.siv
    examples/SPARK/sqrt/out/example/sqrt.slg
    examples/SPARK/sqrt/out/example/sqrt.vcg
    examples/SPARK/sqrt/out/example/sqrt.rls
    examples/SPARK/sqrt/out/example/sqrt.fdl
    examples/SPARK/sqrt/out/sqrt.sli
    examples/SPARK/sqrt/out/sqrt.lst
    examples/SPARK/sqrt/out/spark.rep
    examples/SPARK/erfriemann/src/riemann.adb
    examples/SPARK/erfriemann/src/riemann.ads
    examples/SPARK/erfriemann/riemann.smf
    examples/SPARK/erfriemann/spark.sw
    examples/SPARK/erfriemann/gnat.cfg
    examples/SPARK/erfriemann/out/riemann/erfriemann.fdl
    examples/SPARK/erfriemann/out/riemann/erfriemann.rls
    examples/SPARK/erfriemann/out/riemann/erfriemann.siv
    examples/SPARK/erfriemann/out/riemann/erfriemann.slg
    examples/SPARK/erfriemann/out/riemann/erfriemann.vcg
    examples/SPARK/erfriemann/out/riemann.lst
    examples/SPARK/erfriemann/out/riemann.sli
    examples/SPARK/erfriemann/out/spark.rep


source-repository this
  type:     mercurial
  location: https://code.google.com/p/polypaver/
  tag:      polypaver-0.2


Flag DynamicLoading
  Description: Enable dynamically loading problems defined in Haskell.  Requires installed PolyPaver library.
  Default: False


Library
  hs-source-dirs: src
  ghc-options:     -O2 -Wall
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3.0.0,
        gtk >= 0.12.0,
        cairo >= 0.12.0,
        stm >= 2,
        cmdargs >= 0.7,
        filepath >= 1.1,
        regex-compat >= 0.93.1,
        html >= 1.0.1.2,
        binary >= 0.5,
        syb >= 0.1,
        time >= 1.1,
        convertible >= 1.0,
        parsec >= 3.1.1,
        transformers,
        hashable >= 1.2

  Exposed-modules:
    PolyPaver

  Other-modules:
    PolyPaver.Args,
    PolyPaver.Invocation,
    PolyPaver.ProverLoop,
    PolyPaver.Eval,
    PolyPaver.Logic,
    PolyPaver.Form,
    PolyPaver.Vars,
    PolyPaver.Subterms,
    PolyPaver.Substitution,
    PolyPaver.PPBox,
    PolyPaver.Plot,
    PolyPaver.DeriveBounds,
    Numeric.ER.ShowHTML,
    Numeric.ER.BasicTypes.PlusMinus,
    Numeric.ER.Misc,
    Numeric.ER.BasicTypes.ExtendedInteger,
    Numeric.ER.BasicTypes,
    Numeric.ER.Real.Approx,
    Numeric.ER.Real.Arithmetic.Taylor,
    Numeric.ER.Real.Arithmetic.Elementary,
    Numeric.ER.Real.Approx.Elementary,
    Numeric.ER.Real.Approx.OI,
    Numeric.ER.Real.Base,
    Numeric.ER.Real.Base.MachineDouble,
    Numeric.ER.Real.Base.Float,
    Numeric.ER.Real.Base.Rational,
    Numeric.ER.Real.Approx.Interval,
    Numeric.ER.Real.Base.CombinedMachineAP,
    Numeric.ER.Real.Base.MPFR,
    Numeric.ER.Real.DefaultRepr,
    Numeric.ER.BasicTypes.DomainBox,
    Numeric.ER.BasicTypes.DomainBox.IntMap,
    Numeric.ER.RnToRm.Approx,
    Numeric.ER.RnToRm.UnitDom.Approx,
    Numeric.ER.RnToRm.UnitDom.Base,
    Numeric.ER.RnToRm.UnitDom.Approx.Interval,
    Numeric.ER.RnToRm.UnitDom.Approx.IntervalOI,
    Numeric.ER.RnToRm.Approx.DomTransl,
    Numeric.ER.RnToRm.Approx.DomEdges,
    Numeric.ER.RnToRm.Approx.Tuple,
    Numeric.ER.RnToRm.Approx.Derivatives,
    Numeric.ER.RnToRm.BisectionTree,
    Numeric.ER.RnToRm.BisectionTree.Integration,
    Numeric.ER.RnToRm.Approx.PieceWise,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Basic,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Eval,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Reduce,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Ring,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Derivative,
    Numeric.ER.Real.Arithmetic.LinearSolver,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Bounds,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Enclosure,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.EnclosureInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Compose,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.ComposeInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Integration,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Division,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.DivisionInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Elementary,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.ElementaryInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom,
    Numeric.ER.RnToRm.DefaultRepr

Executable polypaver
  hs-source-dirs: src
  ghc-options:     -O2 -Wall
  main-is: Main.hs
  if flag(DynamicLoading)
    cpp-options: -DDynamicLoading
    Build-Depends:
          base >= 4 && < 5,
          containers >= 0.3.0.0,
          gtk >= 0.12.0,
          cairo >= 0.12.0,
          stm >= 2,
          cmdargs >= 0.7,
          filepath >= 1.1,
          regex-compat >= 0.93.1,
          html >= 1.0.1.2,
          binary >= 0.5,
          syb >= 0.1,
          time >= 1.1,
          convertible >= 1.0,
          parsec >= 3.1.1,
          transformers,
          hashable >= 1.2,
          ghc >= 7.4,
          ghc-paths >= 0.1
  else
    Build-Depends:
          base >= 4 && < 5,
          containers >= 0.3.0.0,
          gtk >= 0.12.0,
          cairo >= 0.12.0,
          stm >= 2,
          cmdargs >= 0.7,
          filepath >= 1.1,
          regex-compat >= 0.93.1,
          html >= 1.0.1.2,
          binary >= 0.5,
          syb >= 0.1,
          time >= 1.1,
          convertible >= 1.0,
          parsec >= 3.1.1,
          transformers,
          hashable >= 1.2
