Name:           polypaver
Version:        0.3
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Jan Duracz and Michal Konecny (Aston University)
Copyright:      (c) 2015 Jan Duracz, Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/polypaver/
Stability:      experimental
Category:       Numerical, Theorem Provers
Synopsis:       Numerical theorem prover based on polynomial interval arithmetic
Tested-with:    
                GHC ==7.8.4
Description:
    Tools for deciding systems of real inequalities and interval inclusions over bounded domains, featuring:
    .    
    * explicit intervals and interval expressions
    .
    * all field operations
    .
    * abs
    .
    * sqrt, exp, sin, cos
    .
    * integrals
    .
    The decision procedure consists in constructing tight polynomial approximations
    to the expressions over parts of the domain. 

Extra-Source-Files:
    CHANGES
    LICENCE
    examples/pp/README
    examples/pp/mini.pp
    examples/pp/power.pp
    examples/pp/sqrt43.pp
    examples/pp/integral.pp
    examples/pp/skewing.pp
    examples/pp/skewing2.pp
    examples/form/true.form

source-repository head
  type:     git
  location: https://github.com/michalkonecny/polypaver

Library
  hs-source-dirs: src
  ghc-options:     -O2 -Wall
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3.0.0,
        gtk >= 0.13.0,
        cairo >= 0.13.0,
        stm >= 2,
        cmdargs >= 0.7,
        filepath >= 1.1,
        regex-compat >= 0.93.1,
        html >= 1.0.1.2,
        binary >= 0.5,
        syb >= 0.1,
        time >= 1.1,
        convertible >= 1.0,
        parsec >= 3.1.1,
        transformers,
        hashable >= 1.2,
        strict >= 0.3.2

  Exposed-modules:
    PolyPaver,
    PolyPaver.Args,
    PolyPaver.Invocation,
    PolyPaver.ProverLoop,
    PolyPaver.Eval,
    PolyPaver.Logic,
    PolyPaver.Form,
    PolyPaver.Vars,
    PolyPaver.Subterms,
    PolyPaver.APBox,
    PolyPaver.Plot,
    PolyPaver.DeriveBounds,
    PolyPaver.Input.SPARK,
    PolyPaver.Input.TPTP,
    PolyPaver.Simplify.Args,
    PolyPaver.Simplify.Substitution

  Other-modules:
    Numeric.ER.ShowHTML,
    Numeric.ER.BasicTypes.PlusMinus,
    Numeric.ER.Misc,
    Numeric.ER.BasicTypes.ExtendedInteger,
    Numeric.ER.BasicTypes,
    Numeric.ER.Real.Approx,
    Numeric.ER.Real.Arithmetic.Taylor,
    Numeric.ER.Real.Arithmetic.Elementary,
    Numeric.ER.Real.Approx.Elementary,
    Numeric.ER.Real.Approx.OI,
    Numeric.ER.Real.Base,
    Numeric.ER.Real.Base.MachineDouble,
    Numeric.ER.Real.Base.Float,
    Numeric.ER.Real.Base.Rational,
    Numeric.ER.Real.Approx.Interval,
    Numeric.ER.Real.Base.CombinedMachineAP,
    Numeric.ER.Real.Base.MPFR,
    Numeric.ER.Real.DefaultRepr,
    Numeric.ER.BasicTypes.DomainBox,
    Numeric.ER.BasicTypes.DomainBox.IntMap,
    Numeric.ER.RnToRm.Approx,
    Numeric.ER.RnToRm.UnitDom.Approx,
    Numeric.ER.RnToRm.UnitDom.Base,
    Numeric.ER.RnToRm.UnitDom.Approx.Interval,
    Numeric.ER.RnToRm.UnitDom.Approx.IntervalOI,
    Numeric.ER.RnToRm.Approx.DomTransl,
    Numeric.ER.RnToRm.Approx.DomEdges,
    Numeric.ER.RnToRm.Approx.Tuple,
    Numeric.ER.RnToRm.Approx.Derivatives,
    Numeric.ER.RnToRm.BisectionTree,
    Numeric.ER.RnToRm.BisectionTree.Integration,
    Numeric.ER.RnToRm.Approx.PieceWise,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Basic,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Eval,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Reduce,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Ring,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Derivative,
    Numeric.ER.Real.Arithmetic.LinearSolver,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Bounds,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Enclosure,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.EnclosureInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Compose,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.ComposeInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Integration,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Division,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.DivisionInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.Elementary,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom.ElementaryInner,
    Numeric.ER.RnToRm.UnitDom.ChebyshevBase.Polynom,
    Numeric.ER.RnToRm.DefaultRepr

Executable polypaver
  hs-source-dirs: main
  ghc-options:     -O2 -Wall -rtsopts
  main-is: polypaver.hs
  Build-Depends:
          polypaver,
          base >= 4 && < 5,
          containers >= 0.3.0.0

Executable pp_simplify
  hs-source-dirs: main
  ghc-options:     -O2 -Wall -rtsopts
  main-is: pp_simplify.hs
  Build-Depends:
          polypaver,
          base >= 4 && < 5,
          cmdargs >= 0.7
